# apex-egui

./: .gitignore  CONSTANTS_AND_CONFIG.md  Cargo.toml  LICENSE  Program.cs  README.md  apex-imgui.csproj  build.bat  build.rs  gitpush.bat  imgui.ini  run.py  window_state.ini
configs/: apex_1080p_dse.json
docs/: Logger_README.md  README.md
modules/: aim_configurate.py  controller.py  device_replug.py  hidhide.py  initialize.py
src/: main.rs  modules.rs  shared_constants.rs  utils.rs
src/App/: WindowState.cs
src/Config/: ConfigModels.cs  ConfigSession.cs
src/Core/: RuntimePerformance.cs
src/Features/Config/: ConfigRepository.cs  ConfigStore.cs
src/Features/Input/: SdlGamepadWorker.cs  ViGEmMappingWorker.cs
src/Features/SmartCore/: SmartCoreAimAssistService.cs
src/Features/Vision/: DesktopCaptureService.cs  DesktopCaptureWorker.cs  OnnxService.cs  OnnxWorker.cs  WeaponRecognitionWorker.cs
src/Input/: InputDevicesFacade.cs  SmartCoreFacade.cs
src/UI/: MainWindow.DebugTab.cs  MainWindow.Home.cs  MainWindow.InputDevices.cs  MainWindow.Vision.cs  MainWindow.cs
src/Vision/: DesktopCaptureWorker.cs  OnnxDmlWorker.cs
src/Workers/: OnnxDmlWorker.cs
src/modules/: bg_con_mapping.rs  bg_con_reading.rs  bg_mouse_mapping.rs  bg_onnx_dml_od.rs  bg_screen_cap.rs  enemy_det_thread.rs  gamepad_mapping_thread.rs  gamepad_reading_thread.rs  hidhide.rs  mapping_state_machine.rs  mod.rs  screen_capture_thread.rs  update_check.rs  weapon_rec_thread.rs
src/utils/: config.rs  console_redirect.rs  tools.rs  ui.rs
utils/: log_cleaner.py  logger.py  tools.py
(+6 files in other folders)
