[package]
name = "apex-egui"
version = "4.1.1"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = true

# 本地机器内存紧张时用：`cargo build --profile release-lowmem`
#（比上面 `fat` LTO + 单 codegen unit 省很多峰值内存，体积/速度略差）
[profile.release-lowmem]
inherits = "release"
lto = "thin"
codegen-units = 16

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }
open = "5.3"
vigem_client = { package = "vigem-client", version = "0.1.4" }
windows-capture = "1.5.0"
ort = { version = "2.0.0-rc.12", features = ["directml"] }
anyhow = "1.0.102"
chrono = "0.4"
num_cpus = "1.17.0"
ureq = "3"
fast_image_resize = "6"
image = "0.25"
imageproc = "0.26"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Input_XboxController"] }
hidapi = "2.6.5"

[build-dependencies]
winresource = "0.1"
image = "0.25"
